--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <figure>
         <img src="./images/image-qr-code.png" alt="qr_code" />
       </figure>
-      <div>
+      <div class="card-details">
         <h1>Improve your front-end skills by building projects</h1>
         <h2>
           Scan the QR code to visit Frontend Mentor and take your coding skills
